tmux
  File "<string>", line 3
    f.write('''#!/bin/bash
            ^
SyntaxError: unterminated triple-quoted string literal (detected at line 15)
